# sci

./: Makefile  Makefile.in  config.h  config.status  configure  configure.ac  runmyexperi.sh
autom4te.cache/: output.0  output.1  traces.0  traces.1
myexperiment/: .domywork.sh.swp  1dimens.tar  MyExperiment.Stat.txt  \  clean.sh  cone.sh  coneSearch.sh  copyOri.sh  copytestdata.sh  domywork.sh  fastbit.tmp.1side.1000000.txt  fastbit.tmp.1side.10000000.txt  fastbit.tmp.1side.100000000.txt  fastbit.tmp.1side.26000000.txt  fastbit.tmp.1side.300000000.txt  fastbit.tmp.1side.500000.txt  fastbit.tmp.1side.5000000.txt  fastbit.tmp.1side.50000000.txt  fastbit.tmp.and.1000000.txt  (+44 more)
src/consist/: Makefile  Makefile.am  Makefile.in  book.thrift  bookserver  main  rpc.thrift
src/consist/.deps/: BookServlet.Po  BookServlet_server.skeleton.Po  book_constants.Po  book_types.Po  main.Po  rpc_constants.Po  rpc_types.Po
src/consist/gen-cpp/: BookServlet.cpp  BookServlet.h  BookServlet_server.skeleton.cpp  book_constants.cpp  book_constants.h  book_types.cpp  book_types.h  rpc_constants.cpp  rpc_constants.h  rpc_types.cpp  rpc_types.h
src/index/: Makefile  Makefile.am  Makefile.in  core.h  coreImpl.cpp  cscope.out  main  main.c  massdata  massdatamysql.cpp  massdatapq  massdatapq.cpp  offlineIndex  offlineIndex.cpp  onlineIndex  onlineIndex.cpp  readFits  readFits.cpp  rtWrite.cpp  rtWriteFits  runtest.sh  test  test.cpp  utils.cpp  utils.h
src/index/.deps/: coreImpl.Po  massdatamysql.Po  massdatapq.Po  offlineIndex.Po  onlineIndex.Po  readFits.Po  rtWrite.Po  test.Po  utils.Po
(+8 files in other folders)
