AUTOMAKE_OPTIONS=foreign

#bin_PROGRAMS= main bookserver

#main_SOURCES= main.c

# bookserver_LDADD	=	-lthrift
# bookserver_SOURCES = gen-cpp/book_constants.cpp\
# gen-cpp/BookServlet.cpp\
# gen-cpp/BookServlet_server.skeleton.cpp\
# gen-cpp/book_types.h\
# gen-cpp/rpc_constants.h\
# gen-cpp/rpc_types.h\
# gen-cpp/book_constants.h\
# gen-cpp/BookServlet.h\
# gen-cpp/book_types.cpp\
# gen-cpp/rpc_constants.cpp\
# gen-cpp/rpc_types.cpp


